# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.h  color.h  headers.h  main.cpp  rgb.h  sphere.h  vec3.h
src/: aabb.h  bvh_node.h  camera.h  headers.h  main.cpp  ray.h  scene.h  vec3.h
src/3rd/share/pkgconfig/: eigen3.pc
src/cmd/: cmd_opts.h
src/geometry/: aarect.h  box.h  constant_medium.h  functions.h  hittable.h  hittable_list.h  moving_sphere.h  rotate_y.h  sphere.h  translate.h  xy_rect.h  xz_rect.h  yz_rect.h
src/light/: diffuse_light.h
src/material/: dielectric.h  isotropic.h  lambertian.h  material.h  metal.h
src/noise/: perlin.h
src/texture/: checker_texture.h  image_texture.h  noise_texture.h  solid_color.h  texture.h
